Truncation Logic on Sparkline Issue - Ellipsis not working correctly (#6744)
* Truncation Logic on Sparkline Issue - Ellipsis not working correctly
This Commit is to fix - https://github.com/Slashbit-Technologies/factors/issues/6711

* Removed Max Width and added 5px Padding left,right

* Update index.module.scss

--- a/frontend-new/src/components/SparkLineChart/index.module.scss
+++ b/frontend-new/src/components/SparkLineChart/index.module.scss
@@ -33,6 +33,11 @@ $factorsDark: '#0E2647';
   font-size: 14px;
   line-height: 20px;
   color: #08172b;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  padding: 0px 5px 0px 5px;
+  
 }
 
 .sparkChart {
